# minimal-repo-meson-cpp-cuda

./: meson.build
shared/: common.h  kernels.h  meson.build  some_code.cpp
