with_cpp = shared_library('with_cpp', 
                            'kernels.cu',
                            'some_code.cpp',
                            cuda_args: ['-DTAG_IS_SHARED=1', '-DTAG_IS_BUILDING=1'],
                            gnu_symbol_visibility: 'hidden',
                            soversion : 1,
                            version : '1.2.3',
                            install: true,
                            install_dir: 'with_cpp',
                            )

only_cpp = shared_library('only_cpp', 
                            'some_code.cpp',
                            cuda_args: ['-DTAG_IS_SHARED=1', '-DTAG_IS_BUILDING=1'],
                            gnu_symbol_visibility: 'hidden',
                            soversion : 1,
                            version : '1.2.3',
                            install: true,
                            install_dir: 'only_cpp',
                            )
